Third day of learning web development. I added a new recipe page and added a navigation bar for easy access.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <hr>
+    <a href="index.html">Home</a>
+    <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/oyakodon.html">Oyakodon</a>
+    <hr>
     
     
 </body>
