--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <hr>
+    <a href="index.html">Home</a>
+    <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/oyakodon.html">Oyakodon</a>
+    <hr>
     <img src="lasagna.jpg" alt="An image of a Lasagna.">
     <h3>Description</h3>
     <p>A lasagna is a mediterranean dish that is made out of pasta,
