Fourth day of learning web development. I smoothed out some bugs regarding the navigation bar. I also dabbled in a bit of CSS in the home page.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Lasagna</h1>
     <hr>
-    <a href="index.html">Home</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/oyakodon.html">Oyakodon</a>
+    <a href="../index.html">Home</a>
+    <a href="lasagna.html">Lasagna</a>
+    <a href="oyakodon.html">Oyakodon</a>
     <hr>
     <img src="lasagna.jpg" alt="An image of a Lasagna.">
     <h3>Description</h3>
