--- a/recipes/oyakodon.html
+++ b/recipes/oyakodon.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Oyakodon</h1>
     <hr>
-    <a href="index.html">Home</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/oyakodon.html">Oyakodon</a>
+    <a href="../index.html">Home</a>
+    <a href="lasagna.html">Lasagna</a>
+    <a href="oyakodon.html">Oyakodon</a>
     <hr>
     <img src="oyakodon.jpg" alt="A picture of Oyakodon.">
     <h3>Description</h3>
