--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <hr>
-    <a href="index.html">Home</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/oyakodon.html">Oyakodon</a>
+    <a href="index.html" class="links">Home</a>
+    <a href="recipes/lasagna.html" class="links">Lasagna</a>
+    <a href="recipes/oyakodon.html" class="links">Oyakodon</a>
     <hr>
     
     
